--- a/css/style.css
+++ b/css/style.css
@@ -2,102 +2,174 @@
 .center { text-align: center; }
 .left { text-align: left; }
 .right { text-align: right; }
-.item { margin-bottom: 20px; }
-
-/* Part 1 */
-.part-1 { background-image: url('../img/pool_table.png'); background-repeat: repeat; }
-.part-1 .btn-register { margin: 50px auto; font-weight: bold; }
-.part-1 .btn-register h1 { margin-top: 10px; }
-.part-1 .slogan { font-weight: bold; color: #fff; margin: 50px auto; }
-.part-1 .slogan h2{font-size: 35px}
-.part-1 .intro { color: rgb(255, 146, 18); text-align: left;padding-bottom: 20px;}
-.part-1 .intro h2 { font-weight: bold; font-size: 45px}
-.part-1 .intro .list { color: #fff;  margin-left: 30px;}
-.part-1 .intro .list .item { font-size: 18px; list-style: none;}
-.part-1 .intro .list .item:before { font-family: FontAwesome; content: "\f05d"; margin-right: 15px; color: rgb(255, 146, 18);margin-left: -30px;}
-
-/* Part 2 */
-.part-2 .header { margin: 50px auto; }
-.part-2 h1 { color: #2a4a75; font-weight: bold; }
-.part-2 .col-md-6 img { width: 70%; margin-bottom: 20px; }
-
-/* Part 3 */
-.part-3 { background: #efefef; box-shadow: 0 -1px 0 0 #dedede inset; }
-.part-3 .header { margin: 50px auto; color: #2a4a75; font-weight: bold; }
-.part-3 .content, .part-5 .center > .content { color: rgb(51, 51, 51); font-size: 21px; margin-top: 0px; margin-bottom: 30px; line-height: 39px; text-align: justify; padding: 0 300px; }
-.part-3 .title-img { margin: 20px 0 50px 0; }
-.part-3 .img { height: 100px; }
-.part-3 img { width: 112px; }
-
-/* Part 4 */
-.part-4 .header { margin: 50px auto; color: #2a4a75; font-weight: bold; }
-.part-4 .description { color: #000; }
-.part-4 .list-1, .part-4 .list-2 { color: #000; margin-top: 50px; margin-left: 30px;}
-.part-4 .list-1 .item, .part-4 .list-2 .item { font-size: 20px; margin-bottom: 10px; text-align: left; }
-.part-4 .list-2 .item { text-align: justify; padding: 0 300px; line-height: 30px; }
-.part-4 .list-1 .item:before { font-family: FontAwesome; content: "\f05d"; margin-right: 10px; color: #ba2f2f; margin-left: -30px;}
-.part-4 .list-2 .item:before { font-family: FontAwesome; content: "\f061"; margin-right: 10px; color: #57c566; margin-left: -30px;}
-.part-4 .list-2 { margin-bottom: 50px; }
-
-/* Part 5 */
-.part-5 { background: #efefef; box-shadow: 0 -1px 0 0 #dedede inset; }
-.part-5 .header { margin: 50px auto; color: #666; font-weight: bold; }
-.part-5 .person, .part-6 .feedback, .part-7 .form, .part-9 .content { padding: 0 300px; }
-.part-5 .person img { margin: 50px 0; }
-.part-5 .person .content { text-align: justify; font-size: 17px; margin-bottom: 40px; }
-.part-5 .person .name { font-weight: bold; font-size: 17px; margin-bottom: 50px; }
-
-/* Part 6 */
-.part-6 .header { margin: 50px auto; color: #2a4a75; font-weight: bold; }
-.part-6 img { height: 540px; margin-bottom: 50px; }
-
-/* Part 7 */
-.part-7 { background: #efefef; box-shadow: 0 -1px 0 0 #dedede inset; }
-.part-7 .header { margin: 50px auto; color: #2a4a75; font-weight: bold; }
-.part-7 .form { padding-bottom: 30px; }
-.part-7 form { background-color: #fff; border-radius: 2px; padding: 5px 30px 30px 30px; }
-.part-7 .form h2, .part-7 .form .description { text-align: left; }
-.part-7 .form .description { margin-bottom: 30px; }
-.part-7 .form input[type=button] { width: 100%; background-color: #eeee22; text-shadow: 1px 0px 3px #d1d11d; transition: all ease 0.3s; font-weight: 700; }
-.part-7 .form input[type=button]:hover { background-color: #cece20; }
-
-/* Part 8 */
-.part-8 {}
-
-/* Part 9 */
-.part-9 { background-color: #0d1725; color: #999999; font-size: 17px; }
-.part-9 a { color: #999999; font-size: 17px; margin: 10px 0; text-decoration: underline; }
-.part-9 a:hover { text-decoration: none; }
-.part-9 .content { padding-top: 15px; padding-bottom: 15px; }
-.down-level-1 {
-	/* background: red; */
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    /* border-bottom: 1px solid;
-    border-right: 1px solid; */
-    height: 40px;
-    width: 40px;
-    top:0;
-    margin-bottom: -20px;
-    z-index: 1;
-    position: relative;
+input[type='number'] {
+    -moz-appearance:textfield;
 }
-.down-level-2 {
-	-webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    /* transform: rotate(-45deg); */
-    font-size: 15px;
-    height: 10px;
-    line-height: 10px;
-    width: 10px;
-    padding: 18px 0 2px 0;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
-.part-1 .down-level-1 { background-image: url(../img/pool_table.png); background-repeat: repeat; color: #fff; }
-.part-2 .down-level-1 { background: #fff; }
-.part-5 .down-level-1 { background: #efefef; border-bottom: 1px solid #dedede; border-right: 1px solid #dedede; }
+/* part-1 */
+.part-1, .part-2, .part-3, .part-4, .part-5 { margin-bottom: 50px; }
+
+.part-1 .logo {
+
+}
+
+.part-1 .description {
+    color: #fff;
+    font-weight: bolder;
+    background-color: #589337;
+}
+
+.part-1 .block {
+    background-color: rgba(244,67,54,1);
+    color: rgba(0,0,0,1);
+}
+
+.part-1 h2 {
+    -webkit-font-smoothing: antialiased;
+    color: rgba(255,255,255,1);
+    font-weight: 700;
+    line-height: 36px;
+    padding: 20px 25px;
+}
+
+/* part-2 */
+/* part-3 */
+.part-3 h2 { margin-bottom: 30px; }
+.part-3 input[type=text], .part-3 input[type=number] {
+	background-color: rgba(255,235,59,1);
+    color: rgba(0,0,0,1);
+    border-width: 1px;
+    border-style: dashed;
+    border-color: rgba(0,0,0,1);
+    height: 52px;
+}
+
+.part-3 input[type=button], .part-5 form input[type=button] {
+    background-color: rgba(221,44,0,1);
+    color: #ffffff;
+    font-weight: 700;
+    line-height: 30px;
+    font-size: 24px;
+    padding: 10px 30px;
+    width: 100%;   
+}
+
+/* part-4 */
+.part-4 img { margin: 50px auto;  }
+.part-4 .content {
+	text-align: justify;
+	font-family: "Open Sans", sans-serif;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    color: rgba(0,0,0,1);
+    font-weight: 400;
+    line-height: 23px;
+    font-size: 17px;
+}
+/* part-5 */
+.part-5 h2 {
+	/* font-family: 'Roboto Slab'; */
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    color: rgba(104,159,56,1);
+    font-weight: 700;
+    line-height: 36px;
+    margin-bottom: 30px;
+	margin-top: 0;
+}
+
+.part-5 form {
+	border-radius: 5px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgba(0,0,0,1);
+    padding: 40px;
+    background-color: rgb(76, 175, 79);
+}
+
+.part-5 form h2 {
+	color: #fff;
+}
+
+.part-5 form input {
+	border-radius: 5px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgba(0,0,0,1);
+    width: 100%;
+}
+
+.part-5 form input[type=text], .part-5 input[type=number] {
+	height: 52px;
+}
+
+.part-5 ul {
+	list-style: none;
+	padding: 0;
+}
+
+.part-5 li {
+	padding-left: 1.3em;
+	color: rgba(0,0,0,1);
+    font-weight: 400;
+    line-height: 22px;
+    font-size: 16px;
+    text-align: justify;
+    margin-bottom: 15px;
+}
+
+.part-5 li:before {
+	content: "\f046"; /* FontAwesome Unicode */
+	font-family: FontAwesome;
+	display: inline-block;
+	margin-left: -1.3em; /* same as padding-left set on li */
+	width: 1.3em; /* same as padding-left set on li */
+}
+
+/* part-6 */
+.part-6 h2 .p-1 {
+	-webkit-font-smoothing: antialiased;
+    color: rgba(156,39,176,1);
+    font-weight: 700;
+    line-height: 36px;
+}
+
+.part-6 h2 .p-2 {
+	-webkit-font-smoothing: antialiased;
+    color: rgba(221,44,0,1);
+    font-weight: 700;
+    line-height: 36px;
+}
+
+.part-6 h2 .p-3 {
+	-webkit-font-smoothing: antialiased;
+    color: #000;
+    font-weight: 700;
+    line-height: 36px;
+}
+
+/* push notification */
+.notification {
+    display: none;
+	position: fixed;
+    top: 500px;
+    left: 10px;
+	border: 1px solid yellow;
+	background-color: rgba(255,255,255,1);
+    padding: 5px 10px;
+    max-width: 290px;
+}
+
+@media only screen and (min-width: 1366px) {
+    .formbody { width: 30%; margin: 0 auto; }
+}
+
+@media only screen and (max-width: 480px) {
+    img { display: block; max-width: 100%; height: auto; }
+}
